--- a/tutorials/MapWithMarker/app/src/main/res/layout/activity_maps.xml
+++ b/tutorials/MapWithMarker/app/src/main/res/layout/activity_maps.xml
@@ -1,20 +1,7 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/map"
+    android:name="com.google.android.libraries.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.libraries.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.mapwithmarker.MapsWithTileOverlayActivity"/>
-
-    <Button
-        android:id="@+id/clear_tile_cache"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:text="clear tile cache"/>
-</FrameLayout>
+    android:layout_height="match_parent"
+    tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
